--- a/client/user/src/mealorder/meal-order-client-app.html
+++ b/client/user/src/mealorder/meal-order-client-app.html
@@ -23,7 +23,8 @@
 <link rel="import" href="../../bower_components/app-layout/app-header/app-header.html">
 <link rel="import"
       href="../../bower_components/app-layout/app-header-layout/app-header-layout.html">
-<link rel="import" href="../../bower_components/app-layout/app-scroll-effects/effects/waterfall.html">
+<link rel="import"
+      href="../../bower_components/app-layout/app-scroll-effects/effects/waterfall.html">
 <link rel="import" href="../../bower_components/app-layout/app-drawer/app-drawer.html">
 <link rel="import" href="../../bower_components/app-layout/app-header/app-header.html">
 <link rel="import" href="../../bower_components/app-route/app-location.html">
@@ -153,13 +154,13 @@
                             type: Object,
                         },
 
-                    /**
-                     * The current server time for the calendar.
-                     */
-                    serverTime: {
-                        type: Date,
-                        statePath: 'serverTime'
-                    }
+                        /**
+                         * The current server time for the calendar.
+                         */
+                        serverTime: {
+                            type: Date,
+                            statePath: 'serverTime'
+                        }
 
                     }
                 }
