Rename action to remove the vendor from the order

--- a/client/user/src/mealorder/shell/actions/user-actions.html
+++ b/client/user/src/mealorder/shell/actions/user-actions.html
@@ -22,6 +22,6 @@
         ADD_DISH_TO_ORDER: "ADD_DISH_TO_ORDER",
         GET_ORDERED_ITEMS: 'GET_ORDERED_ITEMS',
         REMOVE_DISH_FROM_ORDER: 'REMOVE_DISH_FROM_ORDER',
-        REMOVE_VENDOR_FROM_ORDER: 'REMOVE_VENDOR_FROM_ORDER',
+        REMOVE_DISHES_BY_VENDOR: 'REMOVE_DISHES_BY_VENDOR',
     }
 </script>
