--- a/client/user/src/mealorder/menu/meal-order-user-cart.html
+++ b/client/user/src/mealorder/menu/meal-order-user-cart.html
@@ -17,12 +17,12 @@
   ~ (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
   ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
-<!--<script src="../../../bower_components/webcomponentsjs/webcomponents-lite.js"></script>-->
-<link rel="import" href="../shell/meal-order-app-namespace.html">
 <link rel="import" href="../../../bower_components/polymer/polymer-element.html">
-<link rel="import" href="./meal-order-user-order.html">
+<link rel="import" href="../../../bower_components/polymer/lib/elements/dom-repeat.html">
+<link rel="import" href="../../../bower_components/polymer/lib/elements/dom-if.html">
+<link rel="import" href="../shell/meal-order-app-namespace.html">
 <link rel="import" href="../shell/redux-store.html">
-<link rel="import" href="../shell/actions/user-actions.html">
+<link rel="import" href="./meal-order-user-order.html">
 
 <dom-module id="meal-order-user-cart">
     <template>
@@ -57,83 +57,84 @@
         </div>
     </template>
     <script>
-        /**
-         * user-cart is user's order for current date.
-         *
-         * @customElement
-         * @polymer
-         */
-        class MealOrderUserCart extends MealOrderApp.ReduxMixin(Polymer.Element) {
-            static get is() {
-                return 'meal-order-user-cart';
-            }
-
-            static get properties() {
-                return {
-                    /**
-                     * Selected day.
-                     */
-                    selectedDate: {
-                        type: Date,
-                    },
-
-                    /**
-                     * Array to be displayed in a user's order.
-                     */
-                    currentOrder: {
-                        type: Array,
-                        statePath: 'currentOrder'
-                    },
+        {
+            /**
+             * user-cart is user's order for current date.
+             *
+             * @customElement
+             * @polymer
+             */
+            class MealOrderUserCart extends MealOrderApp.ReduxMixin(Polymer.Element) {
+                static get is() {
+                    return 'meal-order-user-cart';
                 }
-            }
 
-            static get actions() {
-                return {
-                    getOrderedItems: date => ({
-                        type: MealOrderApp.UserAction.GET_ORDERED_ITEMS,
-                        date
-                    }),
-                    removeDishesByVendor: vendor => ({
-                        type: MealOrderApp.UserAction.REMOVE_VENDOR_FROM_ORDER,
-                        vendor
-                    }),
-                    removeDishFromOrder: dish => ({
-                        type: MealOrderApp.UserAction.REMOVE_DISH_FROM_ORDER,
-                        dish
-                    }),
-                }
-            }
+                static get properties() {
+                    return {
+                        /**
+                         * Selected day.
+                         */
+                        selectedDate: {
+                            type: Date,
+                        },
 
-            static get observers() {
-                return [
-                    '_getCurrentOrder(selectedDate)'
-                ];
-            }
-
-            _getCurrentOrder(selectedDate) {
-                this.dispatch('getOrderedItems', new Date(selectedDate));
-            }
-
-            _getTotalAmount(currentOrder) {
-                let sum = 0;
-                for (let i = 0; i < currentOrder.order.length; i++) {
-                    for (let j = 0; j < currentOrder.order[i].dishes.length; j++) {
-                        sum += currentOrder.order[i].dishes[j].price * currentOrder.order[i].dishes[j].quantity;
+                        /**
+                         * Array to be displayed in a user's order.
+                         */
+                        currentOrder: {
+                            type: Array,
+                            statePath: 'currentOrder'
+                        },
                     }
                 }
-                return sum;
+
+                static get actions() {
+                    return {
+                        getOrderedItems: date => ({
+                            type: MealOrderApp.UserAction.GET_ORDERED_ITEMS,
+                            date
+                        }),
+                        removeDishesByVendor: vendor => ({
+                            type: MealOrderApp.UserAction.REMOVE_DISHES_BY_VENDOR,
+                            vendor
+                        }),
+                        removeDishFromOrder: dish => ({
+                            type: MealOrderApp.UserAction.REMOVE_DISH_FROM_ORDER,
+                            dish
+                        }),
+                    }
+                }
+
+                static get observers() {
+                    return [
+                        '_getCurrentOrder(selectedDate)'
+                    ];
+                }
+
+                _getCurrentOrder(selectedDate) {
+                    this.dispatch('getOrderedItems', new Date(selectedDate));
+                }
+
+                _getTotalAmount(currentOrder) {
+                    let sum = 0;
+                    for (let i = 0; i < currentOrder.order.length; i++) {
+                        for (let j = 0; j < currentOrder.order[i].dishes.length; j++) {
+                            sum += currentOrder.order[i].dishes[j].price * currentOrder.order[i].dishes[j].quantity;
+                        }
+                    }
+                    return sum;
+                }
+
+                _removeDishFromOrder(event) {
+                    this.dispatch('removeDishFromOrder', event.detail);
+                }
+
+                _removeDishesByVendor(event) {
+                    this.dispatch('removeDishesByVendor', event.detail);
+                }
             }
 
-            _removeDishFromOrder(event) {
-
-                this.dispatch('removeDishFromOrder', event.detail);
-            }
-
-            _removeDishesByVendor(event) {
-                this.dispatch('removeDishesByVendor', event.detail);
-            }
+            window.customElements.define(MealOrderUserCart.is, MealOrderUserCart);
         }
-
-        window.customElements.define(MealOrderUserCart.is, MealOrderUserCart);
     </script>
 </dom-module>
