--- a/client/user/test/mealorder/menu/meal-order-user-cart-actions_test.html
+++ b/client/user/test/mealorder/menu/meal-order-user-cart-actions_test.html
@@ -1,4 +1,3 @@
-<!doctype html>
 <!--
   ~ Copyright 2018, TeamDev Ltd. All rights reserved.
   ~
@@ -67,16 +66,15 @@
             component.selectedDate = new Date("2018-03-21");
             component.currentOrder = MealOrderAppTest.ininitalOrder[0];
 
-            let userOrder;
             flush(function () {
-                userOrder = component.shadowRoot.querySelector('meal-order-user-order');
+                const userOrder = component.shadowRoot.querySelector('meal-order-user-order');
                 userOrder.dispatchEvent((new CustomEvent('user-order-vendor-removed', {detail: VENDOR})));
                 mock.verify();
                 done();
             });
         });
 
-        test('should responds on `dish-removed` event and fire `REMOVE_DISH_FROM_ORDER` action.', function (done) {
+        test('should respond on `dish-removed` event and fire `REMOVE_DISH_FROM_ORDER` action.', function (done) {
             const DATE = new Date("2018-03-21");
             const DISH = {vendor: "Пюре", name: "Борщ украинский"};
 
@@ -96,9 +94,8 @@
             component.selectedDate = new Date("2018-03-21");
             component.currentOrder = MealOrderAppTest.ininitalOrder[0];
 
-            let userOrder;
             flush(function () {
-                userOrder = component.shadowRoot.querySelector('meal-order-user-order');
+                const userOrder = component.shadowRoot.querySelector('meal-order-user-order');
                 userOrder.dispatchEvent((new CustomEvent('user-order-dish-removed', {detail: DISH})));
                 mock.verify();
                 done();
