Import user actions to reducer

--- a/client/user/test/mealorder/menu/meal-order-user-cart-actions_test.html
+++ b/client/user/test/mealorder/menu/meal-order-user-cart-actions_test.html
@@ -55,7 +55,7 @@
                 date: DATE
             };
             const expectedRemoveVendorFromOrderAction = {
-                type: MealOrderApp.UserAction.REMOVE_VENDOR_FROM_ORDER,
+                type: MealOrderApp.UserAction.REMOVE_DISHES_BY_VENDOR,
                 vendor: VENDOR
             };
 
