--- a/client/user/src/mealorder/shell/redux-store.html
+++ b/client/user/src/mealorder/shell/redux-store.html
@@ -18,6 +18,7 @@
   ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
 <link rel="import" href="../../../bower_components/polymer-redux/polymer-redux.html">
+<link rel="import" href="./actions/user-actions.html">
 <link rel="import" href="./reducers/reducers.html">
 <script>
     {
