--- a/client/admin/src/mealorder/shell/actions/admin-actions.html
+++ b/client/admin/src/mealorder/shell/actions/admin-actions.html
@@ -19,11 +19,6 @@
   -->
 <script>
     {
-        /**
-         * A bunch of elements for admin meal order application.
-         *
-         * @namespace MealOrderAdminApp
-         */
-        window.MealOrderAdminApp = window.MealOrderAdminApp || {};
+        MealOrderAdminApp.AdminActions = {};
     }
 </script>
