--- a/client/admin/src/mealorder/shell/reducers/reducers.html
+++ b/client/admin/src/mealorder/shell/reducers/reducers.html
@@ -17,13 +17,12 @@
   ~ (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
   ~ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
   -->
-<link rel="import" href="../meal-order-admin-app-namespace.html">
 <script>
     {
         MealOrderAdminApp.initialState = {};
         MealOrderAdminApp.reducer = (state, action) => {
             if (!state) {
-                return initialState;
+                return MealOrderAdminApp.initialState;
             }
             switch (action.type) {
                 default :
